--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="author" content="Maximiliano Almeira">
     <meta name="keywords" content="fotografía, paisajes, retratos">
     <meta name="description" content="Página web de fotografía para evaluación final de NextU">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/cabecera.css">
+    <link rel="stylesheet" href="css/cuerpoinicio.css">
   </head>
   <body>
     <header>
@@ -18,9 +19,9 @@
         <div id='menu'>
           <nav>
             <ul>
-              <li>Inicio</li>
-              <li>Paisajes</li>
-              <li>Retratos</li>
+              <li> <a href="html/inicio.html">Inicio</a></li>
+              <li> <a href="html/paisajes.html">Paisajes</a></li>
+              <li> <a href="html/retratos.html">Retratos</a></li>
             </ul>
           </nav>
         </div>
